change font and add title

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -44,6 +44,7 @@
 
 .menu-nav {
   color: #03224c !important;
+  font-family: 'Cinzel', serif !important;
   @media screen and (max-width: 1000px) {
     font-size: 60% !important;
   }
