--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,4 +1,5 @@
 #footer {
+  font-family: 'Cinzel', serif;
   background-image: url('/assets/img/if.jpg');
   background-size: cover;
   position: relative;
