--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -6,7 +6,7 @@
   padding: 1em;
   width: 80%;
   color: #000080;
-  border: 2px solid lightgrey;
+  border: 2px solid lightblue;
   background-image: url('/assets/img/ice.jpg');
   background-size: cover;
   box-shadow: 15px 8px 10px lightblue;
@@ -62,7 +62,7 @@
 }
 
 .home-img{
-  width: 70%;
+  width: 50%;
   @media screen and (max-width: 1000px) {
     width: 100%;
     height: 50%;
